--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -155,7 +155,7 @@ input.number:focus {
 	top: 33px;
 	bottom: 0;
 	width: 180px;
-	overflow: auto;
+	/*overflow: auto;*/
 	background: #2b2b2b;
 }
 
@@ -405,10 +405,11 @@ div.vec3 {
 
 .scenegraph-bottom {
 	background-color: #323232;
-	bottom: 10;
-	/*position: absolute;*/
+	bottom: 0;
+	position: absolute;
 	height: 40px;
 	z-index: 100;
+	width: 100%;
 	border-top: 1px solid #111;
 	left: 0;
 }
@@ -426,7 +427,7 @@ a.button:hover {
 
 .scenegraph-bottom a {
 	float: right;
-	margin: 10px;
+	margin: 10px 10px 10px 0px;
 }
 
 /* The container <div> - needed to position the dropdown content */
