--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -3,11 +3,14 @@
 	background: #2b2b2b;
 	padding: 0;
 	width: 100%;
-	font-size: 12px;
+  margin: 0;
+  font-size: 12px;
 	cursor: default;
-	overflow: auto;
 	outline: none;
 	border-top: 1px solid #111;
+  flex: 1 1 auto;
+  overflow-y: auto;
+  min-height: 0px;
 }
 
 	.Outliner .option {
@@ -20,6 +23,25 @@
 		color: #fff;
 	}
 
+  .Outliner .fa {
+    color: #aaa;
+  }
+
+  .Outliner .active .fa {
+    color: #fff;
+  }
+
+  .Outliner .Entity {
+    color: #8888ee;
+  }
+
+  .Outliner .Template {
+    color: #88ee88;
+  }
+
+  .Outliner .Animation {
+    color: #ee8888;
+  }
 
 input {
 	background-color: transparent;
@@ -78,84 +100,84 @@ input.number:focus {
 }
 
 #menubar {
-	position: absolute;
-	width: 100%;
-	height: 32px;
-	background: #323232;
-	padding: 0;
-	margin: 0;
-	right: 0;
-	top: 0;
-	border-bottom: 1px solid #111;
+  position: absolute;
+  width: 100%;
+  height: 32px;
+  background: #323232;
+  padding: 0;
+  margin: 0;
+  right: 0;
+  top: 0;
+  border-bottom: 1px solid #111;
 }
 
-	.menu {
-		display: inline-block;
-		cursor: pointer;
-		padding-right: 8px;
-	}
+  .menu {
+    display: inline-block;
+    cursor: pointer;
+  }
 
-	.menu.right {
-		float: right;
-		cursor: auto;
-		padding-right: 0;
-		text-align: right;
-	}
+  .menu.right {
+    float: right;
+    cursor: auto;
+    padding-right: 0;
+    text-align: right;
+  }
 
-		.menu .title {
-			display: inline-block;
-			color: #888;
-			margin: 0;
-			padding: 9px;
-		}
+    .menu .title {
+      display: inline-block;
+      color: #888;
+      margin: 0;
+      padding: 9px;
+    }
 
-		.menu .options {
-			z-index: 1500;
-			position: absolute;
-			display: none;
-			padding: 5px 0;
-			background: #111;
-			width: 150px;
-		}
+    .menu .options {
+      z-index: 1500;
+      position: absolute;
+      display: none;
+      padding: 5px 0;
+      background: #111;
+      width: 150px;
+    }
 
-		.menu:hover .options {
-			display: block;
-		}
+    .menu:hover .options {
+      display: block;
+    }
 
-			.menu .options hr {
-				border-color: #222;
-			}
+      .menu .options hr {
+        border-color: #222;
+      }
 
-			.menu .options .option {
-				color: #888;
-				background-color: transparent;
-				padding: 5px 10px;
-				margin: 0 !important;
-			}
+      .menu .options .option {
+        color: #888;
+        background-color: transparent;
+        padding: 5px 10px;
+        margin: 0 !important;
+      }
 
-				.menu .options .option:hover {
-					color: #fff;
-					background-color: #08f;
-				}
+        .menu .options .option:hover {
+          color: #fff;
+          background-color: #08f;
+        }
 
-				.menu .options .option:active {
-					background: transparent;
-				}
+        .menu .options .option:active {
+          background: transparent;
+        }
 
-		.menu .options .inactive {
-			color: #444;
-			background-color: transparent;
-			padding: 5px 10px;
-			margin: 0 !important;
-		}
+    .menu .options .inactive {
+      color: #444;
+      background-color: transparent;
+      padding: 5px 10px;
+      margin: 0 !important;
+    }
 
 #sidebar-left {
-	position: absolute;
-	left: 0;
-	top: 33px;
-	bottom: 0;
-	width: 180px;
-	background: #2b2b2b;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 33px;
+  height: calc(100% - 33px);
+  width: 180px;
+  background: #2b2b2b;
 }
 
 
@@ -273,26 +295,6 @@ input.color {
 	border: 0px;
 	padding: 2px;
 	background-color: transparent !important;
-}
-
-.Outliner .fa {
-	color: #aaa;
-}
-
-.Outliner .active .fa {
-	color: #fff;
-}
-
-#outliner .Entity {
-  color: #8888ee;
-}
-
-#outliner .Template {
-  color: #88ee88;
-}
-
-#outliner .Animation {
-  color: #ee8888;
 }
 
 body {
