use monospace font for tag name (fixes #41)

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -317,11 +317,9 @@ div.vec3 {
   width: 50px;
 }
 
-.collapsible {
-}
-
-.collapsible .static span {
+.collapsible-header span {
   float: left;
+  text-transform: uppercase;
 }
 
 .collapsible .static {
@@ -335,15 +333,15 @@ div.vec3 {
 }
 
 .collapsible .menu {
-  text-align:right;
+  text-align: right;
 }
 
 .collapsible .menu:after {
+  color: #1faaf2;
   content: '\2807';
   font-size: 12px;
-  color: #1faaf2;
-  text-align:right;
   padding: 5px;
+  text-align: right;
 }
 
 .collapsible .static .button {
@@ -749,4 +747,12 @@ span.subcomponent {
   cursor: grabbing;
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
+}
+
+code, pre {
+  font-family: Consolas, Andale Mono, Monaco, Courier New, monospace;
+}
+
+.tagName {
+  font-weight: 500;
 }
