--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -322,6 +322,9 @@ div.vec3 {
 
 .collapsible-header span {
   float: left;
+  max-width: 180px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-transform: uppercase;
 }
 
