Forgot to add CSS changes on #188

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -991,3 +991,11 @@ a.flat-button:hover {
 	display: flex;
 	align-items: center;
 }
+
+a.help-link {
+  opacity: 0.4;
+}
+
+a.help-link:hover {
+  opacity: 1.0;
+}
